--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,21 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# --- File Vault ---
+storage/
+vault_backup.zip
+*.zip
+
+# Entornos
+.venv/
+.env
+
+# Streamlit
+.streamlit/
+secrets.toml
+
+# Sistema
+.DS_Store
+__pycache__/
